--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "styles.css">
+    <link rel="icon" href="./images/Untitled design.png">
 </head>
 <body>
-    <h1>Latest News</h1>
+    <header>
+        <nav>
+            <img src="images/Untitled design.png" alt="">
+            <ul>
+                <li>
+                    <a href="">Business</a>
+                </li>
+                <li><a href="">Sport</a></li>
+                <li><a href="">Politics</a></li>
+                <li><a href="">Finance</a></li>
+                <li><a href="">Others</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="section1">
+       <div class="word1">
+        <h2>Welcome to Heroes News</h2>
+        <p>We serve you the latest news</p>
+       </div>
+    </section>
+    <section class="section2">
+        <h1>Latest News</h1>
     <div class="news-container" id="news-container">
-        <!-- News articles will be appended here -->
+    
     </div>
+    </section>
+    <footer>
+
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
