modified the nav bar

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="logo">
             <img src="images/Untitled design.png" alt="">
+        </div>
+        <nav>
             <ul>
                 <li>
                     <a href="">Business</a>
